
set(LIB_NAME vdb)

set(CPP_FILES
    vdb.cpp
    )

set(PUBLIC_HEADERS
    vdb.h
    vdb_impl.h
    )

set(PRIVATE_HEADERS
   )

set(PUBLIC_HEADER_DST_LOCATION "${OF_INST_INC_PATH}/${LIB_NAME}")

add_library(${LIB_NAME} STATIC ${CPP_FILES} ${PUBLIC_HEADERS} ${PRIVATE_HEADERS})
install(TARGETS ${LIB_NAME} DESTINATION ${OF_INST_LIB_PATH})
install(FILES ${PUBLIC_HEADERS} DESTINATION ${PUBLIC_HEADER_DST_LOCATION})
